// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar renders correctly for route / 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <AuthProvider>
      <Navbar>
        <nav
          aria-label="main navigation"
          className="navbar is-info"
          role="navigation"
        >
          <div
            className="navbar-brand"
          >
            <Link
              className="navbar-item"
              onClick={[Function]}
              to="/manage-dataset"
            >
              <a
                className="navbar-item"
                href="/manage-dataset"
                onClick={[Function]}
              >
                <p>
                  OBIS
                </p>
              </a>
            </Link>
            <a
              className="navbar-burger"
              onClick={[Function]}
              role="button"
            >
              <span
                aria-hidden="true"
              />
              <span
                aria-hidden="true"
              />
              <span
                aria-hidden="true"
              />
            </a>
          </div>
          <div
            className="navbar-menu"
          >
            <LoginNavItem
              loggedIn={false}
            >
              <div
                className="login-nav-item navbar-end"
              >
                <span
                  className="navbar-item"
                />
                <AuthButton
                  labelKey="navbar.login"
                  onClick={[Function]}
                >
                  <a
                    className="auth-button navbar-item"
                    onClick={[Function]}
                  >
                    <span
                      className="icon"
                      style={
                        Object {
                          "marginRight": 6,
                        }
                      }
                    >
                      <FontAwesomeIcon
                        icon="user"
                      >
                        <i
                          className="fa"
                          icon="user"
                        />
                      </FontAwesomeIcon>
                    </span>
                    navbar.login
                  </a>
                </AuthButton>
              </div>
            </LoginNavItem>
          </div>
        </nav>
      </Navbar>
    </AuthProvider>
  </Router>
</MemoryRouter>
`;

exports[`Navbar renders correctly for route /help 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/help",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/help",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/help",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <AuthProvider>
      <Navbar>
        <nav
          aria-label="main navigation"
          className="navbar is-info"
          role="navigation"
        >
          <div
            className="navbar-brand"
          >
            <Link
              className="navbar-item"
              onClick={[Function]}
              to="/manage-dataset"
            >
              <a
                className="navbar-item"
                href="/manage-dataset"
                onClick={[Function]}
              >
                <p>
                  OBIS
                </p>
              </a>
            </Link>
            <a
              className="navbar-burger"
              onClick={[Function]}
              role="button"
            >
              <span
                aria-hidden="true"
              />
              <span
                aria-hidden="true"
              />
              <span
                aria-hidden="true"
              />
            </a>
          </div>
          <div
            className="navbar-menu"
          >
            <LoginNavItem
              loggedIn={false}
            >
              <div
                className="login-nav-item navbar-end"
              >
                <span
                  className="navbar-item"
                />
                <AuthButton
                  labelKey="navbar.login"
                  onClick={[Function]}
                >
                  <a
                    className="auth-button navbar-item"
                    onClick={[Function]}
                  >
                    <span
                      className="icon"
                      style={
                        Object {
                          "marginRight": 6,
                        }
                      }
                    >
                      <FontAwesomeIcon
                        icon="user"
                      >
                        <i
                          className="fa"
                          icon="user"
                        />
                      </FontAwesomeIcon>
                    </span>
                    navbar.login
                  </a>
                </AuthButton>
              </div>
            </LoginNavItem>
          </div>
        </nav>
      </Navbar>
    </AuthProvider>
  </Router>
</MemoryRouter>
`;

exports[`Navbar renders correctly for route /input-data 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/input-data",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/input-data",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/input-data",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <AuthProvider>
      <Navbar>
        <nav
          aria-label="main navigation"
          className="navbar is-info"
          role="navigation"
        >
          <div
            className="navbar-brand"
          >
            <Link
              className="navbar-item"
              onClick={[Function]}
              to="/manage-dataset"
            >
              <a
                className="navbar-item"
                href="/manage-dataset"
                onClick={[Function]}
              >
                <p>
                  OBIS
                </p>
              </a>
            </Link>
            <a
              className="navbar-burger"
              onClick={[Function]}
              role="button"
            >
              <span
                aria-hidden="true"
              />
              <span
                aria-hidden="true"
              />
              <span
                aria-hidden="true"
              />
            </a>
          </div>
          <div
            className="navbar-menu"
          >
            <LoginNavItem
              loggedIn={false}
            >
              <div
                className="login-nav-item navbar-end"
              >
                <span
                  className="navbar-item"
                />
                <AuthButton
                  labelKey="navbar.login"
                  onClick={[Function]}
                >
                  <a
                    className="auth-button navbar-item"
                    onClick={[Function]}
                  >
                    <span
                      className="icon"
                      style={
                        Object {
                          "marginRight": 6,
                        }
                      }
                    >
                      <FontAwesomeIcon
                        icon="user"
                      >
                        <i
                          className="fa"
                          icon="user"
                        />
                      </FontAwesomeIcon>
                    </span>
                    navbar.login
                  </a>
                </AuthButton>
              </div>
            </LoginNavItem>
          </div>
        </nav>
      </Navbar>
    </AuthProvider>
  </Router>
</MemoryRouter>
`;

exports[`Navbar renders correctly for route /input-data/new 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/input-data/new",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/input-data/new",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/input-data/new",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <AuthProvider>
      <Navbar>
        <nav
          aria-label="main navigation"
          className="navbar is-info"
          role="navigation"
        >
          <div
            className="navbar-brand"
          >
            <Link
              className="navbar-item"
              onClick={[Function]}
              to="/manage-dataset"
            >
              <a
                className="navbar-item"
                href="/manage-dataset"
                onClick={[Function]}
              >
                <p>
                  OBIS
                </p>
              </a>
            </Link>
            <a
              className="navbar-burger"
              onClick={[Function]}
              role="button"
            >
              <span
                aria-hidden="true"
              />
              <span
                aria-hidden="true"
              />
              <span
                aria-hidden="true"
              />
            </a>
          </div>
          <div
            className="navbar-menu"
          >
            <LoginNavItem
              loggedIn={false}
            >
              <div
                className="login-nav-item navbar-end"
              >
                <span
                  className="navbar-item"
                />
                <AuthButton
                  labelKey="navbar.login"
                  onClick={[Function]}
                >
                  <a
                    className="auth-button navbar-item"
                    onClick={[Function]}
                  >
                    <span
                      className="icon"
                      style={
                        Object {
                          "marginRight": 6,
                        }
                      }
                    >
                      <FontAwesomeIcon
                        icon="user"
                      >
                        <i
                          className="fa"
                          icon="user"
                        />
                      </FontAwesomeIcon>
                    </span>
                    navbar.login
                  </a>
                </AuthButton>
              </div>
            </LoginNavItem>
          </div>
        </nav>
      </Navbar>
    </AuthProvider>
  </Router>
</MemoryRouter>
`;

exports[`Navbar renders correctly when logged in 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Navbar>
      <nav
        aria-label="main navigation"
        className="navbar is-info"
        role="navigation"
      >
        <div
          className="navbar-brand"
        >
          <Link
            className="navbar-item"
            onClick={[Function]}
            to="/manage-dataset"
          >
            <a
              className="navbar-item"
              href="/manage-dataset"
              onClick={[Function]}
            >
              <p>
                OBIS
              </p>
            </a>
          </Link>
          <a
            className="navbar-burger"
            onClick={[Function]}
            role="button"
          >
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
          </a>
        </div>
        <div
          className="navbar-menu"
        >
          <div
            className="navbar-start"
          >
            <NavbarItem
              onClick={[Function]}
              to="/manage-dataset"
            >
              <NavLink
                activeClassName="is-active"
                className="navbar-item"
                onClick={[Function]}
                to="/manage-dataset"
              >
                <Route
                  path="\\\\/manage-dataset"
                >
                  <Link
                    aria-current={null}
                    className="navbar-item"
                    onClick={[Function]}
                    to="/manage-dataset"
                  >
                    <a
                      aria-current={null}
                      className="navbar-item"
                      href="/manage-dataset"
                      onClick={[Function]}
                    >
                      navbar.manageDataset
                    </a>
                  </Link>
                </Route>
              </NavLink>
            </NavbarItem>
            <NavbarItem
              onClick={[Function]}
              to="/manage-users"
            >
              <NavLink
                activeClassName="is-active"
                className="navbar-item"
                onClick={[Function]}
                to="/manage-users"
              >
                <Route
                  path="\\\\/manage-users"
                >
                  <Link
                    aria-current={null}
                    className="navbar-item"
                    onClick={[Function]}
                    to="/manage-users"
                  >
                    <a
                      aria-current={null}
                      className="navbar-item"
                      href="/manage-users"
                      onClick={[Function]}
                    >
                      navbar.manageUsers
                    </a>
                  </Link>
                </Route>
              </NavLink>
            </NavbarItem>
          </div>
          <LoginNavItem
            loggedIn={true}
          >
            <div
              className="login-nav-item navbar-end"
            >
              <span
                className="navbar-item"
              >
                Zeus
              </span>
              <AuthButton
                labelKey="navbar.logout"
                onClick={[MockFunction]}
              >
                <a
                  className="auth-button navbar-item"
                  onClick={[MockFunction]}
                >
                  <span
                    className="icon"
                    style={
                      Object {
                        "marginRight": 6,
                      }
                    }
                  >
                    <FontAwesomeIcon
                      icon="user"
                    >
                      <i
                        className="fa"
                        icon="user"
                      />
                    </FontAwesomeIcon>
                  </span>
                  navbar.logout
                </a>
              </AuthButton>
            </div>
          </LoginNavItem>
        </div>
      </nav>
    </Navbar>
  </Router>
</MemoryRouter>
`;

exports[`Navbar renders correctly when logged out 1`] = `
<MemoryRouter
  initialEntries={
    Array [
      Object {
        "key": "testKey",
        "pathname": "/",
      },
    ]
  }
>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "testKey",
            "pathname": "/",
            "search": "",
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "testKey",
          "pathname": "/",
          "search": "",
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Navbar>
      <nav
        aria-label="main navigation"
        className="navbar is-info"
        role="navigation"
      >
        <div
          className="navbar-brand"
        >
          <Link
            className="navbar-item"
            onClick={[Function]}
            to="/manage-dataset"
          >
            <a
              className="navbar-item"
              href="/manage-dataset"
              onClick={[Function]}
            >
              <p>
                OBIS
              </p>
            </a>
          </Link>
          <a
            className="navbar-burger"
            onClick={[Function]}
            role="button"
          >
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
            <span
              aria-hidden="true"
            />
          </a>
        </div>
        <div
          className="navbar-menu"
        >
          <LoginNavItem
            loggedIn={false}
          >
            <div
              className="login-nav-item navbar-end"
            >
              <span
                className="navbar-item"
              />
              <AuthButton
                labelKey="navbar.login"
                onClick={[MockFunction]}
              >
                <a
                  className="auth-button navbar-item"
                  onClick={[MockFunction]}
                >
                  <span
                    className="icon"
                    style={
                      Object {
                        "marginRight": 6,
                      }
                    }
                  >
                    <FontAwesomeIcon
                      icon="user"
                    >
                      <i
                        className="fa"
                        icon="user"
                      />
                    </FontAwesomeIcon>
                  </span>
                  navbar.login
                </a>
              </AuthButton>
            </div>
          </LoginNavItem>
        </div>
      </nav>
    </Navbar>
  </Router>
</MemoryRouter>
`;
